--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,13 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':clockanimation')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.jakewharton.threetenabp:threetenabp:1.0.3'
     testCompile 'junit:junit:4.12'
-    compile (project(':clockanimation')) {
-        exclude group: 'threetenabp', module: 'threetenabp'
-    }
 }
